# sommarljusstake

./: .gitignore  CMakeLists.txt  HelloTeam.txt  README.md  SommarljusstakeOS.ino  inmatnin.c  inmatnin.h  main.c  msgToMorseCCode.c  statemachinetest.c
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
ArduinoProgram/: ESP8266FirebaseFunctions.ino
ArduinoProgram/ESP8266FirebaseFunctions/: ESP8266FirebaseFunctions.ino
Iteration2Lights/: .cproject  .mxproject  .project  Iteration2Lights.ioc  ProjektII1302 Debug.launch  STM32F746ZGTX_FLASH.ld  STM32F746ZGTX_RAM.ld
Iteration2Lights/Core/Inc/: main.h  usart.h  usb_otg.h
Iteration2Lights/Core/Src/: gpio.c  main.c  stm32f7xx_hal_msp.c  usart.c  usb_otg.c
Iteration2Lights/Debug/: ProjektII1302.list  makefile  objects.list
SommarljusstakeOS/: SommarljusstakeOS.ino
Source-Code/Module-tabell/: tabell.c  tabell.h
projektmetodik-rapportmall-master/: IEEEtran.cls  README.md  rapportmall_tex.tex  references.bib
source-code/: gitlabben.c  main.c
stateMachine/: statemachine.c
stateMachine/testStateMachine/stateMachine2/: stateMachine2.sln
unit test/: testing.c
unit test/Unity-master/src/: helloWorld.c  msgToMorseCCode.c  ranLig.c  testing.c
unitTest/: testing.c
unitTest/Unity-master/src/: delite this.c  helloWorld.c  main.c  msgToMorseCCode.c  ranLig.c  testing.c  unity.c
webpage/: .firebaserc  .gitignore
webpage/__tests__/: Model.test.js
webpage/public/: App.js  aboutView.js  controlsView.js  homeView.js  index.html  style.css
webpage/public/js/: App.js  Model.js  (+2 more)
(+38 files in other folders)
